# structura

./: .gitignore  Cargo.toml  README.md
structura/: Cargo.toml  README.md
structura-app/: Cargo.toml
structura-app/src/: main.rs
structura-lib/: Cargo.toml  README.md
structura-lib/src/: lib.rs
structura-lib/src/component/: button.rs  layout.rs  mod.rs  style.rs  textarea.rs  window.rs
structura-lib/src/container/: border.rs  column.rs  mod.rs  panel.rs  row.rs
structura-lib/src/control/: button.rs  mod.rs  text.rs
structura-lib/src/draw/: primitive.rs  render.rs
structura-lib/src/event/: mod.rs
structura-lib/src/geometry/: mod.rs
structura-lib/src/mvc/: app.rs  controller.rs  message.rs  view.rs
structura/src/: lib.rs
structura/src/component/: button.rs  label.rs  style.rs  text.rs  textarea.rs  tooltip.rs
structura/src/container/: border.rs  column.rs  mod.rs  panel.rs  row.rs
structura/src/draw/: device.rs  primitive.rs
structura/src/event/: mod.rs
structura/src/geometry/: mod.rs
structura/src/mvc/: app.rs  controller.rs  view.rs
